src/static/style.css
/* ... */
@media all and (max-width: 690px) {
    .logo {
        height: 36px;
    }

    .sidebar {
        width: 100%;
    }

    #biglogo img{
        height: 6em;
    }

    .links ul{
        justify-content: center;
        padding: 0;
        gap: 4px;
        flex-wrap: wrap;
    }

    .links ul li{
        margin-bottom: 8px;
    }

    .background {
        padding: 3em 0em;
        position: relative;
        z-index: 1;
    }

    .background::before{
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        width: 100%;
        background-image: url("kernbohrungen-guenther/src/static/images/loch.jpg");
        background-repeat: no-repeat;
        background-size: cover;
        filter: blur(8px);
        opacity: 0.5;
        z-index: -1;
    }

    .background img {
        display: none;
    }

    #machinepic::before {
        background-image: url("/kernbohrungen-guenther/static/images/loch_filter.png");
        background-position: 60% 100%;
    }

    .sectwo{
        padding: 2em;
        position: relative;
        z-index: 1;
    }

    .sectwo::before{
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        width: 100%;
        background-image: url("/static/images/markusspiske-code.jpg");
        background-repeat: no-repeat;
        background-size: cover;
        filter: blur(8px);
        opacity: 0.5;
        z-index: -1;
    }

    #about h1 {
        font-size: xx-large;
        text-align: left;
    }

    #aboutus::before{
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        width: 100%;
        background-image: url("/static/images/portrait.jpg");
        background-repeat: no-repeat;
        background-size: cover;
        filter: blur(8px);
        opacity: 0.5;
        z-index: -1;
    }

    #philosophy::before{
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        width: 100%;
        background-image: url("/static/images/code.png");
        background-repeat: no-repeat;
        background-size: cover;
        filter: blur(8px);
        opacity: 0.5;
        z-index: -1;
    }

    .sectwo h2 {
        font-size: larger;
    }

    .sectwo .right{
        display: none;
        padding: 0;
        margin: 0;
    }

    .portfolio{
        margin-top: 4em;
    }

    .website-container {
        position: relative;
        z-index: 1;
        --background-image: none;
        padding-bottom: 4em;
    }

    .website-container::before {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        width: 100%;
        height: 100%;
        background-image: var(--background-image);
        background-repeat: no-repeat;
        background-size: cover;
        filter: blur(2px);
        opacity: 0.3;
        z-index: -1;
    }

    .website-container .images{
        display: none;
    }

    .website-container .right{
        display: flex;
        flex-direction: column;
        justify-content: center;
    }
    
    .website-container .right h3 {
        color: var(--primary);
        text-align: center;
    }

    .website-containerpo {
        position: relative;
        z-index: 1;
        --background-image: none;
        padding-bottom: 4em;
    }

    .website-containerpo::before {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        width: 100%;
        height: 100%;
        background-image: var(--background-image);
        background-repeat: no-repeat;
        background-size: cover;
        filter: blur(2px);
        opacity: 0.3;
        z-index: -1;
    }

    .website-containerpo .images{
        display: none;
    }

    .website-containerpo .right{
        display: flex;
        flex-direction: column;
        justify-content: center;
    }
    
    .website-containerpo .right h3 {
        color: var(--primary);
        text-align: center;
    }

    .secthree {
        padding: 1em 2em 1em 2em;
    }

    .secthreecontent {
        flex-direction: column;
        gap: 2em;
    }

    .contactformular{
        width: 90%;
        padding: 1em;
    }

    .contactformular h1{
        font-size: xx-large;
    }

    .contact-container{
        gap: 2em;
    }

    .contact-container img{
        max-width: 7em;
        width: 42px;
        filter: invert();
    }


    .imprcontainer {
        display: block;
    }

    .totop.active {
        bottom: 24px;
        right: 24px;
        opacity: 60%;
    }

    .telbutton.active {
        bottom: 64px;
        right: 24px;
        opacity: 60%;
    }

    .mailbutton.active {
        bottom: 104px;
        right: 24px;
        opacity: 60%;
    }
}

/* Observer animation */

.hidden {
    opacity: 0;
    filter: blur(5px);
    transition: all 1s;
}

.show {
    opacity: 1;
    filter: blur(0);
}

